<resources>
    <string name="app_name">Boka2</string>
    <string name="tabcarta">Carta</string>
    <string name="taboferta">Ofertas</string>
    <string name="titulo_localizacion">LOCALIZACIÓN DE LA FOOD TRUCK</string>
    <string name="txtcalle_localizacion_hint">Direccion</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="Login_but_entrar">Entrar</string>
    <string name="Login_txt_registro">¿No tienes una cuenta? Regístrate</string>
    <string name="txtInvitado">Entrar como invitado</string>
    <string name="usuarioycontraseñaincorrectos">El usuario o la contraseña no son correctos</string>
    <string name="titulo_perfil">PERFIL</string>
    <string name="btn_guardar">Guardar</string>
    <string name="titulo_quienes">¿QUIENES SOMOS?</string>
    <string name="quienes_info">Somos Susana Toro, Hendu Sid y Leire Galán, tres compañeras de clase, estudiamos juntas en el año 2010, el grado de administración y finanzas,  en ese periodo tuvimos que montar una empresa simulada las tres, nuestra idea de negocio en aquellos tiempos era parecida a esta, consistía en abrir tiendas por Bizkaia donde se vendería comida sana. Hace dos años nos pusimos en contacto con el objetivo de llevar aquella idea a cabo ya que en su momento nos pareció una gran idea de negocio, hoy en el año 2021 gracias a tener  las tres un espíritu emprendedor, seguimos trabajando en nuestro proyecto.</string>
    <string name="btnRegistro">Registro</string>
    <string name="repetir_contraseña">Repetir Contraseña</string>
    <string name="titulo_reserva">RESERVAR</string>
    <string name="fecha">Fecha: DD/MM/AAAA</string>
    <string name="hora">Hora: HH:mm</string>
    <string name="municipio">Municipio</string>
    <string name="calle">Calle</string>
    <string name="btnreserva">Reservar</string>
    <string name="pagina_actual">Ya estas en esta pagina</string>
    <string name="cierre_sesion">Sesion cerrada</string>
    <string name="campos_vacios">Los campos no pueden estar vacios</string>
    <string name="mapa_error">Error al cargar el mapa.</string>
    <string name="menu_Carta">Carta</string>
    <string name="menu_Localizar">Localizar Food truck</string>
    <string name="menu_Reservar">Reservar</string>
    <string name="menu_Calendario">Calendario</string>
    <string name="menu_Quienes_somos">Quienes somos</string>
    <string name="menu_Perfil">Perfil</string>
    <string name="menu_Cerrar_sesion">Cerrar sesion</string>
    <string name="menu_inicio_sesion">Inicio sesion</string>
    <string name="menu_salir">Registro</string>
    <string name="usuario_existente">El usuario ya existe</string>
    <string name="contraseñas_distintas">Las contraseñas son distintas</string>
    <string name="Contraseña_incorrecta">Las contraseñas debe tener una mayuscula y un número y debe tener como mínimo 6 carácteres</string>
    <string name="ver">Mostrar</string>
    <string name="actualizar_datos">Datos del usuario actualizados</string>
    <string name="reserva_correcta">Reserva realizada correctamente</string>
    <string name="comensales">Comensales</string>
    <string name="seleccion_fecha">Seleccione una fecha</string>
    <string name="reserva_realizada_dia">Ya ha realizado una reserva para ese dia</string>
    <string name="usuario_creado">Usuario creado con exito</string>
</resources>