<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_Carta"
        android:id="@+id/carta">
    </item>

    <item android:title="@string/menu_Localizar"
        android:id="@+id/Localizar">
    </item>

    <item android:title="@string/menu_Reservar"
        android:id="@+id/Reservar">
    </item>

    <item android:title="@string/menu_Calendario"
        android:id="@+id/Calendario">
    </item>

    <item android:title="@string/menu_Quienes_somos"
        android:id="@+id/Quienes">
    </item>

    <item
        android:id="@+id/Perfil"
        android:title="@string/menu_inicio_sesion"></item>

    <item
        android:id="@+id/sesion"
        android:title="@string/menu_Cerrar_sesion"></item>
</menu>