<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".a_login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="196dp"
        android:layout_height="155dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/furgoneta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_login"
        android:layout_width="208dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="30dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Contenedores"
            android:layout_width="208dp"
            android:layout_height="48dp"
            android:hint="@string/usuario"
            android:ems="10"
            android:minHeight="48dp"
            android:inputType="textPersonName"
            android:id="@+id/login_correo"
            android:gravity="left"
            android:textAlignment="gravity"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="208dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_login"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="30dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Contenedores"
            android:layout_width="208dp"
            android:layout_height="48dp"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:id="@+id/login_contr"
            android:gravity="left"
            android:textAlignment="gravity"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Login_txt_error"
        android:layout_width="208dp"
        android:layout_height="45dp"
        android:textAlignment="center"
        android:textColor="#E31D1D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/Login_but_entrar"
        style="@style/botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_but_entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_txt_error"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/Login_txt_registro"
        style="@style/texto"
        android:layout_width="231dp"
        android:layout_height="32dp"
        android:text="@string/Login_txt_registro"
        android:textAlignment="center"
        android:textColor="#2979FF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_but_entrar"
        android:layout_marginTop="30dp"/>


    <TextView
        android:id="@+id/txtInvitado"
        style="@style/texto"
        android:layout_width="230dp"
        android:layout_height="33dp"
        android:text="@string/txtInvitado"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_txt_registro"
        android:layout_marginTop="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>