<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".a_reservas">

    <NumberPicker
        android:id="@+id/numberPicker"
        style="@style/texto"
        android:layout_width="67dp"
        android:layout_height="105dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/munitxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/txtHora"
        app:layout_constraintVertical_bias="0.0">

    </NumberPicker>

    <TextView
        android:id="@+id/titulo5"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:text="@string/titulo_reserva"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtfecha"
        android:layout_width="250dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/fecha"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spinermunicipio"
        android:layout_width="315dp"
        android:layout_height="48dp"

        android:layout_marginEnd="44dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/spinercalle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/calletxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/calle"
        app:layout_constraintBottom_toTopOf="@+id/spinercalle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinermunicipio"
        app:layout_constraintVertical_bias="0.941" />

    <TextView
        android:id="@+id/munitxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/municipio"
        app:layout_constraintBottom_toTopOf="@+id/spinermunicipio"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinercalle"
        android:layout_width="300dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHora"
        app:srcCompat="@drawable/iconousuarioverde" />

    <Button
        android:id="@+id/btnreserva"
        style="@style/botones"
        android:layout_width="126dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnreserva"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView3"
        android:layout_width="393dp"
        android:layout_height="231dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinercalle"
        app:layout_constraintVertical_bias="0.149"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtHora"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/hora"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" /><![CDATA[

    app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377"
        tools:ignore="SpeakableTextPresentCheck" />



























]]>
</androidx.constraintlayout.widget.ConstraintLayout>