<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".a_perfil">

    <TextView
        android:id="@+id/titulo2"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="56dp"
        android:text="@string/titulo_perfil"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="202dp"
        android:layout_height="182dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265"
        app:srcCompat="@drawable/iconousuarioverde" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_usuario"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/prefil_txt_correo"
            style="@style/Contenedores"
            android:layout_width="208dp"
            android:layout_height="48dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="gravity" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputLayout_cont1"
    android:layout_width="208dp"
    android:layout_height="48dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayout_usuario"
    app:passwordToggleEnabled="true"
    android:layout_marginTop="30dp"
    app:boxStrokeWidth="0dp"
    app:boxStrokeWidthFocused="0dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Perfil_contra"
        style="@style/Contenedores"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:gravity="left"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textAlignment="gravity" />

</com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Perfil_btn_guardar"
        style="@style/botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/btn_guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_cont1" />
</androidx.constraintlayout.widget.ConstraintLayout>